Update note.md